Fix splash text overflow on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -537,6 +537,7 @@ footer p {margin:0;padding-right:1rem;}
 
   h1 {
     line-height:80px;
+    font-size: 2rem;
   }
 
   .wrapper {
